force-app/main/default/objects/Case/fields/Case_Team_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Case_Team_Utilized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when case team related list is utilized</description>
    <label>Case Team Utilized</label>
    <type>Checkbox</type>
</CustomField>