force-app/main/default/objects/Case/fields/CE_Requirements__c.field-meta.xml
<CustomField>
    <fullName>CE_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CE/Requirements</label>
    <type>Checkbox</type>
</CustomField>