force-app/main/default/objects/Case/fields/Certified_Practice__c.field-meta.xml
<CustomField>
    <fullName>Certified_Practice__c</fullName>
    <formula>IF(ISPICKVAL(Account.Certified_Practice__c,&apos;Completed&apos;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certified Practice?</label>
    <type>Checkbox</type>
</CustomField>