force-app/main/default/objects/Case/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course</label>
    <type>Checkbox</type>
</CustomField>