force-app/main/default/objects/Case/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>IF(
    IsClosed,
    0,
    TODAY () - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>