force-app/main/default/objects/Case/fields/Days_Since_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Modified__c</fullName>
    <formula>IF( IsClosed , 0,  TODAY()  -  DATEVALUE( LastModifiedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>