force-app/main/default/objects/Case/fields/Directory__c.field-meta.xml
<CustomField>
    <fullName>Directory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directory</label>
    <type>Checkbox</type>
</CustomField>