force-app/main/default/objects/Case/fields/Experts__c.field-meta.xml
<CustomField>
    <fullName>Experts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experts</label>
    <type>Checkbox</type>
</CustomField>