force-app/main/default/objects/Case/fields/How_Difficult_Was_This_Case_to_Close__c.field-meta.xml
<CustomField>
    <fullName>How_Difficult_Was_This_Case_to_Close__c</fullName>
    <label>How Difficult Was This Case to Close?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Difficult</fullName>
            </value>
            <value>
                <fullName>Somewhat Difficult</fullName>
            </value>
            <value>
                <fullName>Very Difficult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>