force-app/main/default/objects/Case/fields/Instructions_Not_Clear__c.field-meta.xml
<CustomField>
    <fullName>Instructions_Not_Clear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instructions Not Clear</label>
    <type>Checkbox</type>
</CustomField>