force-app/main/default/objects/Case/fields/Login_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Login_Credentials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Login Credentials</label>
    <type>Checkbox</type>
</CustomField>