force-app/main/default/objects/Case/fields/Membership_Lead__c.field-meta.xml
<CustomField>
    <fullName>Membership_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membership Lead</label>
    <type>Checkbox</type>
</CustomField>