force-app/main/default/objects/Case/fields/Membership_s__c.field-meta.xml
<CustomField>
    <fullName>Membership_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membership(s)</label>
    <type>Checkbox</type>
</CustomField>