force-app/main/default/objects/Case/fields/Navigation__c.field-meta.xml
<CustomField>
    <fullName>Navigation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Navigation</label>
    <type>Checkbox</type>
</CustomField>