force-app/main/default/objects/Case/fields/onemergefree__LastMergedDate__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__LastMergedDate__c</fullName>
    <description>The timestamp of the last merge event for the record.</description>
    <inlineHelpText>The timestamp of the last merge event for the record.</inlineHelpText>
    <label>Last Merged Date</label>
    <type>DateTime</type>
</CustomField>