force-app/main/default/objects/Case/fields/onemergefree__MasterRecordPriority__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MasterRecordPriority__c</fullName>
    <description>The numeric value used to determine the Master Record for a merged group. The highest value wins.</description>
    <inlineHelpText>The numeric value used to determine the Master Record for a merged group. The highest value wins.</inlineHelpText>
    <label>Master Record Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>