force-app/main/default/objects/Case/fields/onemergefree__MergeRulesetIdentifier__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MergeRulesetIdentifier__c</fullName>
    <description>Identifier for the Merge Ruleset used to merge the Merge Master Record and its duplicates. The identifier is the Merge Ruleset Developer Name.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifier for the Merge Ruleset used to merge the Merge Master Record and its duplicates. The identifier is the Merge Ruleset Developer Name.</inlineHelpText>
    <label>Merge Ruleset Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>