force-app/main/default/objects/Case/fields/onemergefree__SubjectUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__SubjectUpdateDate__c</fullName>
    <description>Timestamp of the latest update to the Case Subject.</description>
    <inlineHelpText>Timestamp of the latest update to the Case Subject.</inlineHelpText>
    <label>Subject Update Date</label>
    <type>DateTime</type>
</CustomField>