force-app/main/default/objects/Case/fields/PC_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>PC_Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC: Dashboard</label>
    <type>Checkbox</type>
</CustomField>