force-app/main/default/objects/Case/fields/PC_Lead__c.field-meta.xml
<CustomField>
    <fullName>PC_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC: Lead</label>
    <type>Checkbox</type>
</CustomField>