force-app/main/default/objects/Case/fields/PC_Order__c.field-meta.xml
<CustomField>
    <fullName>PC_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC: Order</label>
    <type>Checkbox</type>
</CustomField>