force-app/main/default/objects/Case/fields/PC_Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>PC_Self_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC: Self-Assessment</label>
    <type>Checkbox</type>
</CustomField>