force-app/main/default/objects/Case/fields/PC_Virtual_Visit__c.field-meta.xml
<CustomField>
    <fullName>PC_Virtual_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC: Virtual Visit</label>
    <type>Checkbox</type>
</CustomField>