force-app/main/default/objects/Case/fields/Pledge_Violation__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pledge Violation</label>
    <type>Checkbox</type>
</CustomField>