force-app/main/default/objects/Case/fields/Primary_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Case_Reason__c</fullName>
    <label>Primary Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>CE/Requirements</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Directory</fullName>
            </value>
            <value>
                <fullName>Experts</fullName>
            </value>
            <value>
                <fullName>Instructions Not Clear</fullName>
            </value>
            <value>
                <fullName>Login Credentials</fullName>
            </value>
            <value>
                <fullName>Membership(s)</fullName>
            </value>
            <value>
                <fullName>Membership Lead</fullName>
            </value>
            <value>
                <fullName>Membership Renewal</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>Online Store</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PC Lead</fullName>
            </value>
            <value>
                <fullName>PC Renewal</fullName>
            </value>
            <value>
                <fullName>Pet Owner</fullName>
            </value>
            <value>
                <fullName>Pledge Violation</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Practice Certification</fullName>
            </value>
            <value>
                <fullName>Self-Assessment</fullName>
            </value>
            <value>
                <fullName>Shippable Product(s)</fullName>
            </value>
            <value>
                <fullName>Student/Faculty</fullName>
            </value>
            <value>
                <fullName>Trademark Violation</fullName>
            </value>
            <value>
                <fullName>User Account</fullName>
            </value>
            <value>
                <fullName>Virtual Visit</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Career Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>