force-app/main/default/objects/Case/fields/Reason_for_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Inquiry__c</fullName>
    <label>Reason for Inquiry (User Entered)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Question</fullName>
            </value>
            <value>
                <fullName>Practice Certification</fullName>
            </value>
            <value>
                <fullName>Site Issue or Assistance Needed</fullName>
            </value>
            <value>
                <fullName>Media Inquiry</fullName>
            </value>
            <value>
                <fullName>Partnership Inquiry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>