force-app/main/default/objects/Case/fields/Recent_Response_Received_Time__c.field-meta.xml
<CustomField>
    <fullName>Recent_Response_Received_Time__c</fullName>
    <label>Recent Response Received Time</label>
    <type>DateTime</type>
</CustomField>