force-app/main/default/objects/Case/fields/Student_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Student_Faculty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student/Faculty</label>
    <type>Checkbox</type>
</CustomField>