force-app/main/default/objects/Case/fields/Trademark_Violation__c.field-meta.xml
<CustomField>
    <fullName>Trademark_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trademark Violation</label>
    <type>Checkbox</type>
</CustomField>