force-app/main/default/objects/Case/fields/User_Account__c.field-meta.xml
<CustomField>
    <fullName>User_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Account</label>
    <type>Checkbox</type>
</CustomField>