force-app/main/default/objects/Case/fields/Webinar__c.field-meta.xml
<CustomField>
    <fullName>Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webinar</label>
    <type>Checkbox</type>
</CustomField>