force-app/main/default/objects/Case/validationRules/Case_Difficulty.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Difficulty</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
				IsClosed = TRUE,
				ISPICKVAL(How_Difficult_Was_This_Case_to_Close__c, &apos;&apos;),
				$User.Id != &apos;005Hs00000CWUPD&apos;
				)</errorConditionFormula>
    <errorMessage>Please fill out the How Difficult Was This Case to Close field.</errorMessage>
</ValidationRule>