force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Days_Open__c</columns>
    <columns>Days_Since_Last_Modified__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,On Hold,Awaiting Response 1,Awaiting Response 2,Response Received,Escalated,Critical</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notEqual</operation>
        <value>Spam Cases</value>
    </filters>
    <label>All Open Cases</label>
</ListView>