force-app/main/default/objects/Case/listViews/Case_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Case_Queue_Case</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.STATUS</columns>
    <columns>Days_Open__c</columns>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,On Hold,Awaiting Response 1,Awaiting Response 2,Response Received,Escalated,Critical</value>
    </filters>
    <label>Wags Cases</label>
    <queue>Wags_Cases</queue>
    <sharedTo>
        <roleAndSubordinatesInternal>Sales_Marketing_Management</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Support_Management</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>