force-app/main/default/objects/Case/listViews/Marketing_Cases_Mgr_View.listView-meta.xml
<ListView>
    <fullName>Marketing_Cases_Mgr_View</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Lailani Favazzo,Megan Weiss,Andru Valpy</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed (Spam),Closed</value>
    </filters>
    <label>Marketing Cases - Mgr View</label>
    <sharedTo>
        <role>Sales_Marketing_Management</role>
    </sharedTo>
</ListView>