force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Primary_Case_Reason__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Recent_Response_Received_Time__c</columns>
    <columns>Days_Since_Last_Modified__c</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed (Spam)</value>
    </filters>
    <label>My Cases</label>
</ListView>