force-app/main/default/objects/Case/listViews/National_Accounts_Case.listView-meta.xml
<ListView>
    <fullName>National_Accounts_Case</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Reason_for_Inquiry__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed (Spam),Closed</value>
    </filters>
    <label>Corporate Accounts</label>
    <queue>Corporate_Accounts</queue>
    <sharedTo>
        <roleAndSubordinatesInternal>Corporate_Accounts</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>