force-app/main/default/objects/Case/listViews/Sales_Cases_Mgr_View.listView-meta.xml
<ListView>
    <fullName>Sales_Cases_Mgr_View</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Adrian Herrera,Melissa Spooner-Raymond,TD Steward,Sales Cases,Tiffany Score</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed (Spam),Closed</value>
    </filters>
    <label>Sales Cases - Mgr View</label>
    <sharedTo>
        <role>Sales_Marketing_Management</role>
    </sharedTo>
</ListView>